manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "env-single-secret"
  labels:
    app: "env-single-secret"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: "env-single-secret"
