manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "env-single-secret"
  labels:
    app: "env-single-secret"
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: kubecluster76cb-kubecluster-ab68.3ae64f5a47884bd2b976.eastus.aksapp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: "env-single-secret"
              servicePort: 80
